# testcpp

./: .gitignore  CMakeLists.txt
demo/: CMakeLists.txt  adjustBlackWhite.cpp  adjustBrightnessContrast.cpp  adjustCurves.cpp  adjustHSL.cpp  adjustHighPass.cpp  adjustLevels.cpp  imageCrop.cpp  imageRotate.cpp  selectiveColor.cpp
include/: BlackWhite.hpp  ColorSpace.hpp  Curves.hpp  Filter.hpp  HSL.hpp  Levels.hpp  OpenCVWindowExt.h  SelectiveColor.hpp  preProcessImage.h  tools.h
src/: BlackWhite.cpp  ColorSpace.cpp  Curves.cpp  Filter.cpp  HSL.cpp  Levels.cpp  OpenCVWindowExt.cpp  SelectiveColor.cpp  main.cpp  preProcessImage.cpp  preProcessImage1.cpp.1  tools.cpp
